# tools-box

./: CLAUDE.md  Cargo.toml  DESIGN.md  NOTE_TAKER_DESIGN.md  PLUGIN_DESIGN.md
.claude/agents/: code-reviewer.md
.claude/skills/: build.md
src/: app.rs  main.rs  plugin.rs
src/plugins/: mod.rs
src/plugins/api_tester/: client.rs  mock.rs  mod.rs  models.rs  store.rs  ui.rs
src/plugins/diff_viewer/: differ.rs  highlight.rs  mod.rs  models.rs  ui.rs
src/plugins/hosts_manager/: mod.rs  parser.rs  store.rs  ui.rs
src/plugins/json_editor/: mod.rs  processor.rs  ui.rs
src/plugins/note_taker/: markdown.rs  mod.rs  models.rs  store.rs  ui.rs
src/plugins/password_manager/: crypto.rs  mod.rs  models.rs  store.rs  ui.rs
src/storage/: database.rs
