[package]
name = "tools-box"
version = "0.1.0"
edition = "2024"

[dependencies]
# GUI framework
eframe = { version = "0.31", features = ["default"] }
egui = "0.31"

# SQLite database
rusqlite = { version = "0.35", features = ["bundled"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
log = "0.4"
env_logger = "0.11"

# Utilities
dirs = "6"

# JSON processing
serde_json = "1"

# Clipboard
arboard = "3"

# Encryption (for password manager)
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
pbkdf2 = { version = "0.12", default-features = false }
hmac = "0.12"

# Serialization
serde = { version = "1", features = ["derive"] }

# DateTime
chrono = "0.4"

# Text diff
similar = "2.6"

# HTTP client (for API tester)
reqwest = { version = "0.12", features = ["blocking", "json"] }

# UUID generation
uuid = { version = "1", features = ["v4"] }
pulldown-cmark = "0.13.4"
urlencoding = "2.1.3"
